// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> renders a background image 1`] = `
<div>
  <div
    class="css-1aeqb5q"
  >
    <div
      aria-description="A decorative background image"
      aria-hidden="true"
      class="css-hfn5ud"
    />
  </div>
</div>
`;

exports[`<Card /> renders a blank card 1`] = `
<div>
  <div
    class="css-1aeqb5q"
    data-testid="test-card"
  />
</div>
`;

exports[`<Card /> renders an image component 1`] = `
<div>
  <div
    class="css-1aeqb5q"
  >
    <img
      alt="test"
      data-testid="image-component"
      src="/testimage.jpg"
    />
  </div>
</div>
`;

exports[`<Card /> renders children 1`] = `
<div>
  <div
    class="css-1aeqb5q"
  >
    lorem ipsum
  </div>
</div>
`;
